--- a/app/css/style.css
+++ b/app/css/style.css
@@ -8,6 +8,11 @@
     font-family: 'YekanMedium';
 }
 
+@font-face {
+    src: url(../fonts/Yekan-Bakh-Regular.ttf);
+    font-family: 'YekanReg';
+}
+
 * {
     box-sizing: border-box
 }
@@ -18,7 +23,7 @@
 
 html, body {
     width: 100%;
-    height: 100%;
+    height: 100vh;
     margin: 0;
     padding: 0;
     direction: rtl
@@ -26,7 +31,7 @@ html, body {
 
 .container {
     width: 100%;
-    height: 100%;
+    height: 100vh;
     display: flex;
     flex-direction: row;
     margin: 0;
@@ -48,7 +53,7 @@ html, body {
 .content-container {
     height: 100%;
     background-color: #f4f4f4;
-    padding-right: 2rem;
+    position: relative;
 }
 
 .image-container {
@@ -90,17 +95,27 @@ html, body {
     background-repeat: no-repeat !important;
 }
 
+.content-wrapper {
+    position: absolute;
+    top: 30%;
+    transform: translateY(-30%);
+    padding-right: 4rem;
+}
+
 .title {
     width: 100%;
     font-size: 4.5rem;
     color: #1b1b1b;
     font-family: 'YekanHeavy';
+    padding: 0;
+    margin: 0;
 }
 
-.lined-text {
-    /* text-decoration: underline;
-    text-decoration-color: #ffc400;
-    text-decoration-skip: ink; */
+.sub-title {
+    width: 100%;
+    font-size: 1.5rem;
+    color: #ffc400;
+    font-family: 'YekanMedium';
 }
 
 .gallery-btn {
@@ -110,16 +125,37 @@ html, body {
     border: 2px solid #ffc400;
     border-radius: 1.25rem;
     color: #ffffff;
-    padding: .625rem 2rem;
-    font-size: 1.25rem;
+    padding: .5rem 2rem;
+    font-size: 1rem;
     font-family: 'YekanMedium';
     text-align: center;
     transition: 0.2s;
     font-weight: 500;
+    margin-top: 2rem;
 }
 
 .gallery-btn:hover {
     background-color: transparent;
     border: 2px solid #ffc400;
     color: #ffc400;
+}
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    background-color: #1b1b1b;
+    width: 100%;
+    padding: .625rem 2rem;
+    font-family: 'YekanReg';
+    color: #ffffff;
+}
+
+.info-wrapper {
+    display: flex;
+    flex-direction: row;
+    font-size: .825rem;
+}
+
+.info-key {
+    width: 3em;
 }
