--- a/app/css/style.css
+++ b/app/css/style.css
@@ -21,9 +21,10 @@
     font-size: 16px;
 }
 
-html, body {
+html,
+body {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     margin: 0;
     padding: 0;
     direction: rtl
@@ -32,6 +33,7 @@ html, body {
 .container {
     width: 100%;
     height: 100vh;
+    min-height: 400px;
     display: flex;
     flex-direction: row;
     margin: 0;
@@ -44,16 +46,21 @@ html, body {
 
 .col-5 {
     width: 41.65%;
+    position: relative;
 }
 
 .col-6 {
     width: 49.98%;
 }
 
-.content-container {
+.bg-image {
+    width: 100%;
     height: 100%;
-    background-color: #f4f4f4;
-    position: relative;
+    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('../images/bg\(2\).jpg');
+    opacity: 0.2;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 .image-container {
@@ -68,21 +75,23 @@ html, body {
     flex-direction: column;
     align-items: center;
     padding-top: 3rem;
+    
+    position: relative !important;
 }
 
 .contact-container a {
     text-decoration: none;
-    margin-bottom: 1.25rem;
+    margin-bottom: 1.5rem;
 }
 
 .contact-container i {
     cursor: pointer;
     font-size: 1.5rem;
     color: #ffc400;
-    transition: 0.3s;
+    transition: all 0.3s;
 }
 
-.contact-container i:hover {
+.contact-container a:hover i {
     color: #ffffff;
 }
 
@@ -138,24 +147,230 @@ html, body {
     background-color: transparent;
     border: 2px solid #ffc400;
     color: #ffc400;
+    
 }
 
 .footer {
     position: absolute;
     bottom: 0;
-    background-color: #1b1b1b;
     width: 100%;
-    padding: .625rem 2rem;
-    font-family: 'YekanReg';
-    color: #ffffff;
+    text-align: center;
+    padding: .5rem 0;
 }
 
-.info-wrapper {
+.powered-link {
+    color: #ffc400;
+    text-decoration: none;
+    cursor: pointer;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 700;
+}
+
+.rights {
+    font-weight: 500;
+    font-family: 'YekanMedium';
+}
+
+.info-icon {
+    position: relative;
+}
+
+.info-icon i:first-child {
+    font-size: 0;
+    margin-left: 0;
+    transform: scale(0);
+    opacity: 0;
+    transition: all 0.3s;
+}
+
+.info-icon:hover i:first-child {
+    font-size: 1.25rem;
+    opacity: 1;
+    transform: scale(1);
+    margin-left: .5rem;
+}
+
+.drop-right {
+    width: 320px;
+    padding: .5rem 1rem;
+    box-shadow: 0 0 13px -3px rgba(0, 0, 0, .1);
+    background-clip: padding-box;
+    background-color: rgb(255, 255, 255);
+    border-bottom-color: rgb(243, 243, 243);
+    border-radius: .25rem;
+    position: absolute;
+    z-index: 2;
+    left: 3rem;
+    top: 50%;
+    transform: translateY(-50%);
     display: flex;
-    flex-direction: row;
-    font-size: .825rem;
+    flex-direction: column;
+    font-family: 'YekanReg';
+    transition-duration: 0.3s;
+    opacity: 0;
 }
 
-.info-key {
-    width: 3em;
+.info-icon:hover .drop-right {
+    opacity: 1;
+}
+
+.drop-right i {
+    display: inline !important;
+    opacity: 1 !important;
+    color: #ffc400 !important;
+    margin-left: .5rem;
+}
+
+.drp-row {
+    line-height: 1.8;
+    margin: .25rem 0;
+}
+
+/*======================================*/
+
+
+.slideshow-container {
+    display: none;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    margin: auto;
+    top: 0;
+    left: 0;
+    z-index: 10;
+    background-color: rgba(0, 0, 0, 0.7);
+    justify-content: center;
+    align-items: center;
+}
+
+.mySlides {
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.mySlides img {
+    width: 700px;
+    height: 450px;
+}
+
+.prev,
+.next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    margin-top: -22px;
+    padding: 16px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 3px 0 0 3px;
+    user-select: none;
+}
+
+.next {
+    left: 0 !important;
+    border-radius: 0 3px 3px 0;
+}
+
+.prev {
+    right: 0;
+}
+
+.prev:hover,
+.next:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+.text {
+    color: #ffffff;
+    background-color: #1b1b1b;
+    font-size: 1rem;
+    font-weight: 500;
+    padding: .5rem .625rem;
+    text-align: center;
+    font-family: 'YekanMedium';
+    border-radius: .25rem;
+    margin-top: .25rem
+}
+
+.active {
+    background-color: #717171;
+}
+
+.fade {
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 1.5s;
+    animation-name: fade;
+    animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+    from {
+        opacity: .4
+    }
+
+    to {
+        opacity: 1
+    }
+}
+
+@keyframes fade {
+    from {
+        opacity: .4
+    }
+
+    to {
+        opacity: 1
+    }
+}
+
+.times {
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    color: #ffffff;
+    font-size: 1.5rem;
+    font-weight: 700;
+    cursor: pointer;
+}
+
+@media screen and (max-width: 992px) {
+    .col-6 {
+        width: 0 !important;
+        display: none;
+    }
+
+    .col-5 {
+        width: 91.67%
+    }
+
+    .mySlides img {
+        width: 500px;
+        height: 300px;
+    }
+
+    .contact-container i {
+        font-size: 1.25rem;
+    }
+
+    .info-icon:hover i:first-child {
+        font-size: 1rem;
+        opacity: 1;
+        transform: scale(1);
+        margin-left: .25rem;
+    }
+}
+
+@media screen and (max-width: 625px) {
+    .title {
+        font-size: 3rem;
+    }
+
+    .sub-title {
+        font-size: 1.25rem;
+    }
 }
